--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,7 +1,5 @@
 [defaults]
-# This is the default location of the inventory file, script, or directory that Ansible will use to determine what hosts it has available to talk to
-inventory = inventory
-#specify here the remote hosts so we do not need to config them in main ssh config
+inventory = ./dev
 [ssh_connection]
 transport=ssh
 ssh_args= -F ssh.config
