--- a/ansible/ssh.config
+++ b/ansible/ssh.config
@@ -6,7 +6,7 @@ Host *
     HashKnownHosts yes
     #IdentityFile allows to specify exactly which private key I wish to use for authentification
     IdentityFile ./id_rsa
-Host control
+Host control01
     HostName localhost
     User root
     Port 2224
