--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
   server1.control:
-    image: ubuntu-ssh
+    image: centos-ssh
     hostname: control
     volumes:
       - ansible:/root/ansible
@@ -10,28 +10,28 @@ services:
       - "8081:8080"
 
   server2.lb01:
-    image: ubuntu-ssh
+    image: centos-ssh
     hostname: lb01
     ports:
       - "2225:22"
       - "8082:80"
 
   server3.app01:
-    image: ubuntu-ssh
+    image: centos-ssh
     hostname: app01
     ports:
       - "2226:22"
       - "8083:8080"
 
   server3.app02:
-    image: ubuntu-ssh
+    image: centos-ssh
     hostname: app02
     ports:
       - "2227:22"
       - "8084:8080"
 
   server3.db01:
-    image: ubuntu-ssh
+    image: centos-ssh
     hostname: db01
     ports:
       - "2228:22"
