--- a/ansible/ssh.config
+++ b/ansible/ssh.config
@@ -7,23 +7,28 @@ Host *
     #IdentityFile allows to specify exactly which private key I wish to use for authentification
     IdentityFile ./id_rsa
 Host control01
-    HostName localhost
+    HostName 172.19.0.5
     User root
-    Port 2224
+    Port 22
 Host lb01
-    HostName localhost
+    HostName 172.19.0.2
     User root
-    Port 2225
+    Port 22
 Host app01
-    HostName localhost
+    HostName 172.19.0.6
     User root
-    Port 2226
+    Port 22
 Host app02
-    HostName localhost
+    HostName 172.19.0.4
     User root
-    Port 2227
+    Port 22
 Host db01
-    HostName localhost
+    HostName 172.19.0.3
     User root
-    Port 2228
+    Port 22
+# ansible-playground_server3.app01_1 172.19.0.6
+# ansible-playground_server3.db01_1 172.19.0.3
+# ansible-playground_server3.app02_1 172.19.0.4
+# ansible-playground_server1.control_1 172.19.0.5
+# ansible-playground_server2.lb01_1 172.19.0.2
 
