at par with changes

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,5 +1,10 @@
 [defaults]
 inventory = ./dev
+# Use the YAML callback plugin
+stdout_callback = yaml
+# Use the stdout_callback when running ad-hoc commands
+bin_ansible_callback = True
+interpreter_python = auto_silent
 [ssh_connection]
 transport=ssh
 ssh_args= -F ssh.config
